--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section></section>
+        <section>test</section>
         <section></section>
         <section></section>
         <section></section>
