--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/style.css">
-    <title>Samir Vllaço</title>
+    <title>samir x starlabs</title>
 </head>
 
 <body>
@@ -14,16 +14,19 @@
     <header>
         <nav>
             <ul>
-                <li>home</li>
-                <li>skills</li>
-                <li>experience</li>
-                <li>blog</li>
+                <li><a>github:\samir.starlabs\index.html</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>test</section>
+        <section>
+            <p>samir.codes [Version 1.0] <br>
+                (c) samir. All rights reserved. <br> <br>
+                github:\samir.starlabs\index.html  
+                </p>
+        </section>
+
         <section></section>
         <section></section>
         <section></section>
@@ -32,7 +35,14 @@
     </main>
 
     
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>+383 45 943 557</li>
+            <li>vllacosamir@gmail.com</li>
+        </ul>
+
+        <div class="go-to-top"></div>
+    </footer>
 
 </body>
 </html>
