--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <ul>
                 <li><a>github:\samir.starlabs\index.html</a> <img class="anuloje-x" src="resources/img/anuloje.svg"></li>
                 <img class="shtoje-x" src="resources/img/anuloje.svg">
-                
             </ul>
         </nav>
         
+        <img class="mshele-x" src="resources/img/anuloje.svg">
     </header>
 
     <main>
