--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a>github:\samir.starlabs\index.html</a> <img class="anuloje-x" src="resources/img/anuloje.svg"></li>
+                <li><img class="cmd-icon" src="resources/img/cmd.png"><a>github:\samir.starlabs\index.html</a> <img class="anuloje-x" src="resources/img/anuloje.svg"></li>
             </ul>
             <img class="shtoje-x" src="resources/img/anuloje.svg">
         </nav>
@@ -29,12 +29,18 @@
                 <p class="helloo">samir.codes [Version 1.0]</p>
                 <p class="hello">(c) samir. All rights reserved. </p>
                 <p class="hello">github:\samir.starlabs\index.html</p>
+                <input type="text" placeholder="color a?">
             </div>
                 <div class="question">?</div>
         </section>
 
         <section class="second-section">
-            <h1>Hello World.</h1>
+
+            <div class="contact">
+                <a href="https://linkedin.com/in/samirvllaço " target="_blank">Linkedin<i class="icon-linkedin"></i></a>
+                <a href="https://github.com/samiscold" target="_blank">Github<i class="icon-github"></i></a>
+              </div>
+
         </section>
 
 
@@ -49,5 +55,7 @@
         <div class="go-to-top"></div>
     </footer>
 
+
+    <script src="resources/js/script.js"></script>
 </body>
 </html>
