get input from user

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <p class="helloo">samir.codes [Version 1.0]</p>
                 <p class="hello">(c) samir. All rights reserved. </p>
                 <p class="hello">github:\samir.starlabs\index.html</p>
-                <input type="text" placeholder="color a?">
+    
+                <p id="wronginput"></p>
+
+
+                <input type="text"  id="result" placeholder="color a?">
+                <input onclick="myFunction()" type="submit" />
             </div>
                 <div class="question">?</div>
         </section>
