--- a/resources/img/dsa.html
+++ b/resources/img/dsa.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" href="dsa_files/style.css">
     <title>samir x starlabs</title>
 </head>
 
@@ -14,12 +13,12 @@
     <header>
         <nav>
             <ul>
-                <li><img class="cmd-icon" src="resources/img/cmd.png"><a>github:\samir.starlabs\index.html</a> <img class="anuloje-x" src="resources/img/anuloje.svg"></li>
+                <li><img class="cmd-icon" src="dsa_files/cmd.png"><a>github:\samir.starlabs\index.html</a> <img class="anuloje-x" src="dsa_files/anuloje.svg"></li>
             </ul>
-            <img class="shtoje-x" src="resources/img/anuloje.svg">
+            <img class="shtoje-x" src="dsa_files/anuloje.svg">
         </nav>
 
-        <img class="mshele-x" src="resources/img/anuloje.svg">
+        <img class="mshele-x" src="dsa_files/anuloje.svg">
     </header>
 
     <main>
@@ -29,18 +28,20 @@
                 <p class="helloo">samir.codes [Version 1.0]</p>
                 <p class="hello">(c) samir. All rights reserved. </p>
                 <p class="hello">github:\samir.starlabs\index.html</p>
+    
                 <p id="wronginput"></p>
-            </div>
 
-            <input type="text"  id="result" placeholder="color a?">
-            <input onclick="myFunction()" type="submit" />
+
+                <input type="text" id="result" placeholder="color a?" value="cls">
+                <input onclick="myFunction()" type="submit">
+            </div>
                 <div class="question">?</div>
         </section>
 
         <section class="second-section">
 
             <div class="contact">
-                <a href="https://linkedin.com/in/samirvllaço " target="_blank">Linkedin<i class="icon-linkedin"></i></a>
+                <a href="https://linkedin.com/in/samirvlla%C3%A7o" target="_blank">Linkedin<i class="icon-linkedin"></i></a>
                 <a href="https://github.com/samiscold" target="_blank">Github<i class="icon-github"></i></a>
               </div>
 
@@ -59,6 +60,6 @@
     </footer>
 
 
-    <script src="resources/js/script.js"></script>
-</body>
-</html>
+    <script src="dsa_files/script.js"></script>
+
+</body></html>
