--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 </head>
 
 <body>
-    <div id="element" onmouseover="showtab()"></div>
-    </div>
+
     <header>
+
         <nav>
             <ul class="abc">
-                <li id="listid" class="first-tab"><img class="cmd-icon" id="cmdicon" src="resources/img/cmd.png"><a
-                        id="atext">github:\samir.starlabs\index.html</a> <img onclick="closeTab()" id="anulojex"
-                        class="anuloje-x" src="resources/img/anuloje.svg"></li>
+                <li id="listid" class="first-tab"><img class="cmd-icon" id="cmdicon" src="resources/img/cmd.png">
+                    <a id="atext">github:\samir.starlabs\index.html</a> 
+                    <img onclick="closeTab()" id="anulojex" class="anuloje-x" src="resources/img/anuloje.svg">
+                </li>
             </ul>
             <img onclick="tabSwitch()" id="shto" class="shtoje-x" src="resources/img/anuloje.svg">
         </nav>
 
         <img onclick="closeFunction()" class="mshele-x" src="resources/img/anuloje.svg">
+
     </header>
+
 
     <main>
         <section class="first-section">
@@ -35,7 +38,7 @@
                 <p class="hello">github:\samir.starlabs\index.html</p>
 
                 <div id="aboutme" class="about-me">
-                  
+
                     <div class="img-border">
                         <img class="pfp" src="resources/img/pfpdone.png" alt="">
                     </div>
@@ -72,7 +75,7 @@
 
             <div class="inputs">
                 <input class="cmd-input" type="text" id="result" placeholder="search something">
-                <input id="click" class="search-input" onclick="myFunction()" value="search">
+                <input id="click" class="search-input" onclick="myFunction()" value="">
             </div>
 
 
@@ -85,18 +88,19 @@
 
         </section>
         <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+
     </main>
 
 
     <footer>
+        <p>Author: Samir Vllaço © - Made with 🖤 and ☕.<br>
+            <a href="mailto:hege@example.com">vllacosamir@gmail.com</a></p>
         <div class="go-to-top"></div>
     </footer>
 
 
     <script src="resources/js/script.js"></script>
+
 </body>
 
 </html>
