--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
             <div class="second-text">
                 <p class="helloo">samir.codes [Version 1.0]</p>
                 <p class="hello">(c) samir. All rights reserved. </p>
-                <p class="hello">github:\samir.starlabs\index.html</p>
+                <p class="hello">github:\samir.starlabs\blog.html</p>
 
                 <div id="aboutme" class="about-me">
                     <div class="img-border">
@@ -42,6 +42,7 @@
 
                     <div class="text-me">
                         <h1> Hello Blog!</h1>
+                        <h5>get_index() to go home.</h5>
                     </div>
 
                   
@@ -69,7 +70,8 @@
 
                             <h2>Health tips for programmers.</h2>
                             <h5>How to stay healthy while staying inside!, Jan 29, 2022</h5>
-                            <div class="fakeimg" style="height:200px;">Image</div>
+                            <img style="width: 100%; height:200px" src="resources\img\ks-code.jpg" alt="">
+
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                           </div>
                     </a>
@@ -79,7 +81,7 @@
                     <a href="#">
                             <h2>Best repost on github that you shouldn't miss</h2>
                             <h5>top star github repos with MIT license, Jan 29, 2022</h5>
-                                <img style="width: 400px; height:200px" src="\resources\img\ks-code.jpg" alt="">
+                            <img style="width: 100%; height:200px" src="resources\img\ks-code.jpg" alt="">
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                           </div>
                     </a>
@@ -88,7 +90,8 @@
                     <a href="#">
                             <h2>Why you should update your plugins after recent Wordpress attack</h2>
                             <h5>Acesspress hacked, Jan 29, 2022</h5>
-                            <div class="fakeimg" style="height:200px;">Image</div>
+                            <img style="width: 100%; height:200px" src="resources\img\ks-code.jpg" alt="">
+
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
                                 scrambled it to make a type specimen book. It has survived not only five centuries,</p>
                           </div>
