--- a/index.html
+++ b/index.html
@@ -83,13 +83,19 @@
                     </div>
 
                 </div>
+                    <div class="skills">
+                        <p>HTML</p>
 
+                        <p>CSS</p>
 
+                        <p>JS</p>
 
+                        <p>PHP</p>
+
+                    </div>
+
+<div class="print-here"></div>
                 <p id="wronginput"></p>
-
-
-
 
 
             <div class="inputs">
