--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
     <div class="overlay">
         <div class="commands">
-            <p>"color a" to change the color</p>
             <p>"get_blog()" go to blogpager</p>
             <p>"get_index()" go to homepage</p>
+            <p>"get_skills()" go to skills</p>
+            <p>"color a" to change the color</p>
             <p>"cls" : to clear</p>
+           
         </div>
     </div>
 
