--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<?php 
+?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +28,7 @@
         </nav>
         <img onclick="closeFunction()" class="mshele-x" src="resources/img/anuloje.svg">
     </header>
+
 
     <div class="overlay">
         <div class="commands">
