--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="overlay">
         <div class="commands">
-            <p>"get_blog()" go to blogpager</p>
+            <p>"get_blog()" go to blog page</p>
             <p>"get_index()" go to homepage</p>
             <p>"get_skills()" go to skills</p>
             <p>"color a" to change the color</p>
