--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
         <div class="overlay">
             <div class="commands">
-                <p>"get_blog()" go to blogpager</p>
+                <p>"get_blog()" go to blog page</p>
                 <p>"get_index()" go to homepage</p>
                 <p>"get_skills()" go to skills</p>
                 <p>"color a" to change the color</p>
@@ -53,10 +53,12 @@
                     </div>
                 </div>
                 <div onclick="displayCommands()" class="question">?</div>
+
+                <div class="print-here"></div>
                 <p id="wronginput"></p>
                 <div class="inputs">
                     <input class="cmd-input" type="text" id="result" placeholder="search something">
-                    <input id="click" class="search-input" onclick="myFunction()" value="search">
+                    <input id="click" class="search-input" onclick="myFunction()" value="">
                 </div>
 
                 <!--blog content-->
