--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/style.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <title>samir x starlabs</title>
+    <title>samircodes</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <ul class="abc">
                 <li id="listid" class="first-tab">
                     <img class="cmd-icon" id="cmdicon" src="resources/img/cmd.png">
-                    <a id="atext">github:\samir.starlabs\index.html</a>
+                    <a id="atext">github:\samir.codes\index.html</a>
                     <img onclick="closeTab()" id="anulojex" class="anuloje-x" src="resources/img/anuloje.svg">
                 </li>
             </ul>
