--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/style.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <title>samir x starlabs</title>
+    <title>samircodes</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <ul class="abc">
                 <li id="listid" class="first-tab">
                     <img class="cmd-icon" id="cmdicon" src="resources/img/cmd.png">
-                    <a id="atext">github:\samir.starlabs\blog.html</a>
+                    <a id="atext">github:\samir.codes\blog.html</a>
                     <img onclick="closeTab()" id="anulojex" class="anuloje-x" src="resources/img/anuloje.svg">
                 </li>
             </ul>
