--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
 
     <header>
-        <!--tabs + new tabs-->
         <nav>
             <ul class="abc">
                 <li id="listid" class="first-tab">
@@ -90,7 +89,6 @@
                 <input class="cmd-input" type="text" id="result" placeholder="search something">
                 <input id="click" class="search-input" onclick="myFunction()" value="">
             </div>
-            <!-- all available commands list-->
         </section>
     </main>
 
@@ -98,7 +96,10 @@
         <p>Author: Samir Vllaço © - Made with 🖤 and ☕. <br>
             <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
         </p>
-        <div class="go-to-top"></div>
+
+        <a href="#listid">
+            <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
+        </a>
     </footer>
 
     <script src="resources/js/script.js"></script>
