--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
         </p>
 
-        <a href="#listid">
+        <a href="index.html">
             <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
         </a>
     </footer>
