--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
         </p>
 
-        <a href="index.html">
+        <a href="" onclick="goTop()">
             <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
         </a>
     </footer>
