--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="section-text">
                 <p class="helloo">samir.codes [Version 1.0]</p>
                 <p class="hello">(c) samir. All rights reserved. </p>
-                <p class="hello">github:\samir.starlabs\index.html</p>
+                <p class="hello">github:\samir.codes\index.html</p>
             </div>
             <div id="aboutme" class="about-me">
                 <div class="img-border">
