--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="resources/style.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <title>samircodes</title>
+    <title>samir.codes</title>
 </head>
+
 
 <body>
 
+
     <header>
+
         <nav>
+
             <ul class="abc">
                 <li id="listid" class="first-tab">
                     <img class="cmd-icon" id="cmdicon" src="resources/img/cmd.png">
-                    <a id="atext">github:\samir.codes\index.html</a>
+                    <a id="atext">samir.codes\index</a>
                     <img onclick="closeTab()" id="anulojex" class="anuloje-x" src="resources/img/anuloje.svg">
                 </li>
             </ul>
             <img onclick="tabSwitch()" id="shto" class="shtoje-x" src="resources/img/anuloje.svg">
         </nav>
+
         <img onclick="closeFunction()" class="mshele-x" src="resources/img/anuloje.svg">
+
     </header>
 
 
@@ -37,8 +42,9 @@
             <p>"cls" : to clear</p>
         </div>
     </div>
-    
+
     <main>
+
         <section class="first-section">
             <div class="section-text">
                 <p class="helloo">samir.codes [Version 1.0]</p>
@@ -55,11 +61,17 @@
                         Web, OOP and Cyber-Security. Currently learning Javascript & PHP. <br> In my free time I listen
                         to tech podcasts and drink ☕. </span>
                     <div class="contact">
+                        <i class='fa fa-instagram'></i>
+                        <a href="https://www.instagram.com/samir.codes/" target="_blank">Instagram</a>
+                        -
                         <i class='fa fa-linkedin'></i>
-                        <a href="https://linkedin.com/in/samirvllaço " target="_blank">Linkedin </a> - <i
-                            class='fa fa-github'></i>
-                        <a href="https://github.com/samiscold" target="_blank">Github <i class="icon-github"></i>
+                        <a href="https://linkedin.com/in/samirvllaço " target="_blank">Linkedin </a> 
+                        - 
+                        <i class='fa fa-github'></i>
+                        <a href="https://github.com/samiscold" target="_blank">Github
                         </a>
+
+                     
                     </div>
                 </div>
             </div>
@@ -89,9 +101,12 @@
                 <input id="click" class="search-input" onclick="myFunction()" value="">
             </div>
         </section>
+
     </main>
 
+
     <footer>
+
         <p>Author: Samir Vllaço © - Made with 🖤 and ☕. <br>
             <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
         </p>
@@ -99,9 +114,11 @@
         <a href="" onclick="goTop()">
             <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
         </a>
+
     </footer>
 
     <script src="resources/js/script.js"></script>
 </body>
+
 
 </html>
