--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="resources/style.css">
+    <link rel="icon" type="image/x-icon" href="resources/img/pfpdone.png">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <title>samir.blogs</title>
-    <link rel="icon" type="image/x-icon" href="/resources/img/pfpdone.png">
 </head>
 
 <body>
