--- a/index.html
+++ b/index.html
@@ -105,19 +105,24 @@
 
     </main>
 
-
     <footer>
+        <div id="particles-js"></div>
 
-        <p>Author: Samir Vllaço © - Made with 🖤 and ☕. <br>
-            <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
-        </p>
 
-        <a href="" onclick="goTop()">
-            <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
-        </a>
+        <div class="footer-info">
+            <p>Author: Samir Vllaço © - Made with 🖤 and ☕. <br>
+                <a href="mailto:hege@example.com">vllacosamir@gmail.com</a>
+            </p>
+    
+            <a href="" onclick="goTop()">
+                <div class="go-to-top"><img src="resources/img/gototop.svg"></div>
+            </a>
+        </div>
+      
 
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.js" integrity="sha256-icjghcPaibMf1jv4gQIGi5MeWNHem2SispcorCiCfSg=" crossorigin="anonymous"></script>
     <script src="resources/js/script.js"></script>
 </body>
 
