--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 </div>
             </div>
             <div onclick="displayCommands()" class="question">?</div>
+
             <div class="skillss">
                 <p>HTML</p>
                 <div class="container">
@@ -95,8 +96,12 @@
                     <div class="skills php">15%</div>
                 </div>
             </div>
-            <div class="print-here"></div>
+
+            <div class="print-here">
             <p id="wronginput"></p>
+            </div>
+
+            
             <div class="inputs">
                 <input class="cmd-input" type="text" id="result" placeholder="search something">
                 <input id="click" class="search-input" onclick="myFunction()" value="">
