--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     <h1> Hello World</h1>
                     <span>I am Samir Vllaço, a Computer Science Student & Technology Enthusiast. <br> Passionate about
                         Web, OOP and Cyber-Security. Currently learning Javascript & PHP. <br> In my free time I listen
-                        to tech podcasts and drink ☕. </span>
+                        to tech podcasts and drink ☕. <br><br>
+                        👯 I’m looking to collaborate on Wordpress & PHP, reach out here:</span>
                     <div class="contact">
                         <i class='fa fa-instagram'></i>
                         <a href="https://www.instagram.com/samir.codes/" target="_blank">Instagram</a>
